fixed/ menu / search btn and overflow auto

--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,7 @@
   left: -220px;
   background-color: #4d4954;
   z-index: 999;
+  overflow: auto;
 
 }
 
@@ -166,6 +167,7 @@
   padding: 10px;
   font-size: 16px;
   color: #ffe5db;
+  padding-bottom: 80px;
 }
 
 .headline-search {
@@ -205,14 +207,18 @@
 
 .btn-search {
   margin-top: 20px;
-  width: 50%;
-  display: inline-block;
+  width: 42% !important;
+  display: inline-block !important;
+  font-size: 14px !important;
+  padding: 0 !important;
 }
 
 .btn-clear {
   margin-top: 20px;
-  width: 50%;
-  display: inline-block;
+  width: 42% !important;
+  display: inline-block !important;
+  font-size: 14px !important;
+  padding: 0 !important;
 }
 
 /* .btn-success {
